Disable Feature Mono ligatures on form fields to stop special-character overlap in journal

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,8 @@ input,
 textarea,
 select {
   font-family: var(--font-body);
+  font-variant-ligatures: none;
+  font-feature-settings: 'liga' 0, 'clig' 0, 'calt' 0, 'dlig' 0;
 }
 
 ::-webkit-scrollbar {
